--- a/code_for__sprintbuild.ipynb
+++ b/code_for__sprintbuild.ipynb
@@ -6,7 +6,7 @@
       "name": "code_for_ sprintbuild.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3SKNzme/h2I5rzh+Yxj0F",
+      "authorship_tag": "ABX9TyPx+q+CtCR7XWmV/RMGyfMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "pd.set_option('display.max_rows', 3000)\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -53,10 +53,10 @@
         "colab": {}
       },
       "source": [
-        "a = pd.read_csv(r\"/content/nba_games_all.csv\")\n",
-        "spread = pd.read_csv(r\"/content/nba_betting_spread.csv\")"
+        "a = pd.read_csv(r\"https://docs.google.com/spreadsheets/d/1dSGjFrzAq5ni9caeoAZjBlmnkZbdouHGpnZNPh24xu4/gviz/tq?tqx=out:csv\")\n",
+        "spread = pd.read_csv(r\"https://docs.google.com/spreadsheets/d/1atsateqP5dU1KeKcPVviLLM1CnE3A8zg_RhUSp45HRE/gviz/tq?tqx=out:csv\")"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -68,12 +68,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 309
         },
-        "outputId": "d0b2fc5f-28ca-477e-a3a6-87b4cd3fcfbc"
+        "outputId": "f7c60bfa-3c60-402d-ffe9-146c936d044d"
       },
       "source": [
         "a.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,137 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y-VJCl-usvhm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "0cd078c4-28e9-498c-d6ae-cd0c6af345fa"
+      },
+      "source": [
+        "spread.head()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>game_id</th>\n",
+              "      <th>book_name</th>\n",
+              "      <th>book_id</th>\n",
+              "      <th>team_id</th>\n",
+              "      <th>a_team_id</th>\n",
+              "      <th>spread1</th>\n",
+              "      <th>spread2</th>\n",
+              "      <th>price1</th>\n",
+              "      <th>price2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>21000358</td>\n",
+              "      <td>Pinnacle Sports</td>\n",
+              "      <td>238</td>\n",
+              "      <td>1610612749</td>\n",
+              "      <td>1610612742</td>\n",
+              "      <td>7.5</td>\n",
+              "      <td>-7.5</td>\n",
+              "      <td>-106</td>\n",
+              "      <td>-104</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>21000358</td>\n",
+              "      <td>5Dimes</td>\n",
+              "      <td>19</td>\n",
+              "      <td>1610612749</td>\n",
+              "      <td>1610612742</td>\n",
+              "      <td>7.5</td>\n",
+              "      <td>-7.5</td>\n",
+              "      <td>-110</td>\n",
+              "      <td>-110</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21000358</td>\n",
+              "      <td>Bookmaker</td>\n",
+              "      <td>93</td>\n",
+              "      <td>1610612749</td>\n",
+              "      <td>1610612742</td>\n",
+              "      <td>7.5</td>\n",
+              "      <td>-7.5</td>\n",
+              "      <td>-110</td>\n",
+              "      <td>-110</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>21000358</td>\n",
+              "      <td>BetOnline</td>\n",
+              "      <td>1096</td>\n",
+              "      <td>1610612749</td>\n",
+              "      <td>1610612742</td>\n",
+              "      <td>7.5</td>\n",
+              "      <td>-7.5</td>\n",
+              "      <td>-110</td>\n",
+              "      <td>-110</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>21000358</td>\n",
+              "      <td>Bovada</td>\n",
+              "      <td>999996</td>\n",
+              "      <td>1610612749</td>\n",
+              "      <td>1610612742</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>-8.0</td>\n",
+              "      <td>-115</td>\n",
+              "      <td>-105</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    game_id        book_name  book_id     team_id   a_team_id  spread1  spread2  price1  price2\n",
+              "0  21000358  Pinnacle Sports      238  1610612749  1610612742      7.5     -7.5    -106    -104\n",
+              "1  21000358           5Dimes       19  1610612749  1610612742      7.5     -7.5    -110    -110\n",
+              "2  21000358        Bookmaker       93  1610612749  1610612742      7.5     -7.5    -110    -110\n",
+              "3  21000358        BetOnline     1096  1610612749  1610612742      7.5     -7.5    -110    -110\n",
+              "4  21000358           Bovada   999996  1610612749  1610612742      8.0     -8.0    -115    -105"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
@@ -6391,10 +6521,128 @@
         "colab": {}
       },
       "source": [
-        "nba_teams = pd.read_csv(r\"/content/nba_teams_all.csv\")"
+        "nba_teams = pd.read_csv(r\"https://docs.google.com/spreadsheets/d/1R3ULfA2pq8tYsoSuVcENfIAaf_lkYdeXWjrAQQechWA/gviz/tq?tqx=out:csv\")"
       ],
-      "execution_count": 27,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "092ZAxt8uQL7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "d82100d3-b9ee-4960-95fc-20dac3935839"
+      },
+      "source": [
+        "nba_teams.head()"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>league_id</th>\n",
+              "      <th>team_id_x</th>\n",
+              "      <th>min_year</th>\n",
+              "      <th>max_year</th>\n",
+              "      <th>name</th>\n",
+              "      <th>conference</th>\n",
+              "      <th>division</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1610612737</td>\n",
+              "      <td>1949</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>ATL</td>\n",
+              "      <td>EAST</td>\n",
+              "      <td>SOUTHEAST</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1610612738</td>\n",
+              "      <td>1946</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>BOS</td>\n",
+              "      <td>EAST</td>\n",
+              "      <td>ATLANTIC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1610612739</td>\n",
+              "      <td>1970</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>CLE</td>\n",
+              "      <td>EAST</td>\n",
+              "      <td>CENTRAL</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1610612740</td>\n",
+              "      <td>2002</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>NOP</td>\n",
+              "      <td>WEST</td>\n",
+              "      <td>SOUTHWEST</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1610612741</td>\n",
+              "      <td>1966</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>CHI</td>\n",
+              "      <td>EAST</td>\n",
+              "      <td>CENTRAL</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   league_id   team_id_x  min_year  max_year name conference   division\n",
+              "0          0  1610612737      1949      2018  ATL       EAST  SOUTHEAST\n",
+              "1          0  1610612738      1946      2018  BOS       EAST   ATLANTIC\n",
+              "2          0  1610612739      1970      2018  CLE       EAST    CENTRAL\n",
+              "3          0  1610612740      2002      2018  NOP       WEST  SOUTHWEST\n",
+              "4          0  1610612741      1966      2018  CHI       EAST    CENTRAL"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6544,9 +6792,10 @@
         "colab": {}
       },
       "source": [
-        "r = pd.read_csv(r\"/content/record.csv\")"
+        "#record of wins/losses of underdogs and favorites\n",
+        "r = pd.read_csv(r\"https://docs.google.com/spreadsheets/d/1U2N8458PSNZPvtYQcSyFFKj5X365vvBRN2fTgffe7Mk/gviz/tq?tqx=out:csv\")"
       ],
-      "execution_count": 31,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -6800,13 +7049,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "outputId": "fe085704-d754-487b-df06-388e93ffa29a"
+        "outputId": "827bfb20-f206-42eb-eab1-243bf4f18074"
       },
       "source": [
         "r.head()\n",
         "# ATS wins, losses, and pushes as underdog and favorite"
       ],
-      "execution_count": 32,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6912,7 +7161,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 14
         }
       ]
     },
